--- a/package.json
+++ b/package.json
@@ -25,10 +25,7 @@
     "opentype.js": "0.4.4",
     "socket.io": "1.4.8",
     "superagent": "0.21.0",
-    "vd": "0.1.0",
-    "gulp": "3.9.0",
-    "gulp-babel": "6.1.1",
-    "gulp-rimraf": "0.2.0"
+    "vd": "0.1.0"
   },
   "license": "MIT",
   "devDependencies": {
@@ -36,6 +33,9 @@
     "babel-preset-es2015": "6.3.13",
     "babel-eslint": "6.0.4",
     "babel-register": "6.9.0",
+    "gulp": "3.9.0",
+    "gulp-babel": "6.1.1",
+    "gulp-rimraf": "0.2.0",
     "eslint": "2.12.0",
     "eslint-config-default": "0.2.0",
     "mocha": "2.2.4",
@@ -57,7 +57,6 @@
   },
   "scripts": {
     "test": "mocha && eslint lib/**",
-    "prepublish": "gulp",
-    "postinstall": "gulp"
+    "prepublish": "gulp"
   }
 }
