--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "1.10.2",
     "cors": "2.7.1",
     "debug": "2.1.1",
+    "dotenv": "^4.0.0",
     "email-regex": "1.0.0",
     "express": "4.11.0",
     "hostenv": "1.0.1",
@@ -30,14 +31,14 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "6.3.26",
-    "babel-preset-es2015": "6.3.13",
     "babel-eslint": "6.0.4",
+    "babel-preset-es2015": "6.3.13",
     "babel-register": "6.9.0",
+    "eslint": "2.12.0",
+    "eslint-config-default": "0.2.0",
     "gulp": "3.9.0",
     "gulp-babel": "6.1.1",
     "gulp-rimraf": "0.2.0",
-    "eslint": "2.12.0",
-    "eslint-config-default": "0.2.0",
     "mocha": "2.2.4",
     "nock": "2.17.0",
     "supertest": "0.15.0"
